5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_2518.log
== TEST (2019-05-07 23:42:58) 
-- CODE:
x=int(input)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:43:11) 
-- CODE:
x=int(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input)
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:43:50) 
-- CODE:
x=int(input())
a=x//100
b=(x//100%)10
c=x%10
-- ERROR:
File "XXXX", line 3
    b=(x//100%)10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:44:05) 
-- CODE:
x=int(input())
a=x//100
b=(x//100)%10
c=x%10
-- ERROR:
File "XXXX", line 3
    b=(x//100%)10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:44:21) 
-- CODE:
x=int(input())
a=x//100
b=(x//100)%10
c=x%10
print(a,b,c)
-- OUTPUT:
0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:44:31) 
-- CODE:
x=int(input())
a=x//100
b=(x//10)%10
c=x%10
print(a,b,c)
-- OUTPUT:
0 1 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:32:49) 
-- CODE:
x=float(input("Digite um numero: "))
while(x>=1):
	if(x%2==0):
		x=x/2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- OUTPUT:
5.0
16.0
8.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:39:24) 
-- CODE:
x=float(input("Digite um numero: "))
while(x>=1):
	if(x%2==0):
		x=x//2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- OUTPUT:
5.0
16.0
8.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
2.0
1.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:32) 
-- CODE:
x=float(input("Digite um numero: "))
while(x>1):
	if(x%2==0):
		x=x//2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- OUTPUT:
5.0
16.0
8.0
4.0
2.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:48) 
-- CODE:
x=float(input("Digite um numero: "))
while(x>1):
	if(x%2==0):
		x=x//2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- EXECUTION TIME:
0.146147
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5.0
16.0
8.0
4.0
2.0
1.0
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136.0
68.0
34.0
17.0
52.0
26.0
13.0
40.0
20.0
10.0
5.0
16.0
8.0
4.0
2.0
1.0
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40.0
20.0
10.0
5.0
16.0
8.0
4.0
2.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:55) 
-- CODE:
x=float(input("Digite um numero: "))
while(x>1):
	if(x%2==0):
		x=x//2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- OUTPUT:
5.0
16.0
8.0
4.0
2.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:16) 
-- CODE:
x=int(input("Digite um numero: "))
while(x>1):
	if(x%2==0):
		x=x//2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:30) 
-- CODE:
x=int(input("Digite um numero: "))
while(x>1):
	if(x%2==0):
		x=x//2
		print(x)
	else:
		x=(x*3)+1
		print(x)
		
-- EXECUTION TIME:
0.11149
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
